--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <figure class="imagens">
      <img src="imagens/Grungy_Black_and_White_Stars_9369a4b3-e358-4f73-b5d4-28d93e60b836_1280x.webp">
     </figure>
+    <a href="pagina.html">qualquer coisa</a>
 </body>
 </html>
