--- a/pagina.html
+++ b/pagina.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>site</h1>
     <a href="index.html">maracuja</a>
+    <figura class="imagens">
+        <img src="imagens/download.jpeg">
 </body>
 </html>
