--- a/pagina.html
+++ b/pagina.html
@@ -8,7 +8,8 @@
 <body>
     <h1>site</h1>
     <a href="index.html">maracuja</a>
-    <figura class="imagens">
+    <figure class="imagens">
         <img src="imagens/download.jpeg">
+    </figure>
 </body>
 </html>
