--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>bem vindo</h1>
     <figure class="imagens">
-     <img src="imagens/Grungy_Black_and_White_Stars_9369a4b3-e358-4f73-b5d4-28d93e60b836_1280x.webp">
+     <img src="imagens/resident-evil-6_2326710.jpg">
     </figure>
     <a href="pagina.html">qualquer coisa</a>
 </body>
