--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <figure class="imagens">
      <img src="imagens/resident-evil-6_2326710.jpg">
     </figure>
-    <a href="pagina.html">qualquer coisa</a>
+    <a href="pagina.html">trocar</a>
 </body>
 </html>
