--- a/pagina.html
+++ b/pagina.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>site</h1>
-    <a href="index.html">maracuja</a>
+    <a href="index.html">voltar</a>
     <figure class="imagens">
         <img src="imagens/download.jpeg">
     </figure>
