--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        body {
+            text-align: center;
+            background-color: blueviolet;
+        }
+        
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pagina principal</title>
@@ -8,7 +15,7 @@
 <body>
     <h1>bem vindo</h1>
     <figure class="imagens">
-     <img src="imagens/resident-evil-6_2326710.jpg">
+     <img src="imagens/">
     </figure>
     <a href="pagina.html">trocar</a>
 </body>
