--- a/pagina.html
+++ b/pagina.html
@@ -9,7 +9,8 @@
     <h1>site</h1>
     <a href="index.html">voltar</a>
     <figure class="imagens">
-        <img src="imagens/download.jpeg">
+        <img src="imagens/noite-escura-na-floresta-700-80863576.jpg">
     </figure>
+    
 </body>
 </html>
