--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <h1>bem vindo</h1>
+    <a href="rodape.html">rodape</a>
     <figure class="imagens">
      <img src="imagens/45184mn.jpg">
     </figure>
