--- a/rodape.html
+++ b/rodape.html
@@ -8,7 +8,7 @@
         footer {
             position: absolute;
             bottom: 0;
-            background-color: brown;
+            background-color: #fff;
             color: sienna;
             width: 100%;
             height: 100px;
