--- a/rodape.html
+++ b/rodape.html
@@ -8,8 +8,8 @@
         footer {
             position: absolute;
             bottom: 0;
-            background-color: #fff;
-            color: sienna;
+            background-color: sienna;
+            color: #fff;
             width: 100%;
             height: 100px;
             text-align: center;
