--- a/pagina.html
+++ b/pagina.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        body {
+            text-align: center;
+            background-color: azure;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
@@ -11,6 +17,6 @@
     <figure class="imagens">
         <img src="imagens/noite-escura-na-floresta-700-80863576.jpg">
     </figure>
-    
+
 </body>
 </html>
