--- a/pagina.html
+++ b/pagina.html
@@ -3,10 +3,21 @@
 <head>
     <style>
         body {
+
             text-align: center;
             background-color: azure;
         }
-        
+        footer {
+            position: absolute;
+            bottom: 0;
+            background-color: sienna;
+            color: #fff;
+            width: 100%;
+            height: 100px;
+            text-align: center;
+            line-height: 100px;
+        }
+
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
