--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
             text-align: center;
             background-color: blueviolet;
         }
+        footer {
+            position: absolute;
+            bottom: 0;
+            background-color: sienna;
+            color: #fff;
+            width: 100%;
+            height: 100px;
+            text-align: center;
+            line-height: 100px;
+        }
         
     </style>
     <meta charset="UTF-8">
