--- a/tabela.html
+++ b/tabela.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>outro</title>
+    <style>
+         footer {
+            position: absolute;
+            bottom: 0;
+            background-color: sienna;
+            color: #fff;
+            width: 100%;
+            height: 100px;
+            text-align: center;
+            line-height: 100px;
+        }
+    </style>
 </head>
 <body>
     <h1>qualquer coisa</h1>
