--- a/contato.html
+++ b/contato.html
@@ -5,26 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contato</title>
 </head>
-<style>
-    footer{
-        position: fixed;
-        bottom: 1%;
-        background-color: rgb(50, 90, 92);
-        color: aliceblue;
-        width: 100%;
-        height: 200px;
-        text-align: center;
-        line-height: 100px;
-    }
-
-    body{
-        background-color: cadetblue;
-        font-size: 30px;
-    }
-</style>
 <body>
-    <footer>
-        <p><a href="index.html"> pagina inicial</a> <a href="pagina.html">segunda pagina</a> <a href="tabela.html">tabela</a><a href="rodape">rodape</a>
-    </footer>
+    <form action="" method="post">
+        <fieldset>
+            <legend> identificação</legend>
+            <p>
+                <label for="nome">nome:</label>
+                <input type="text" name="nome" placeholder="digite seu nome completo." maxlength="150">
+            </p>
+        </fieldset>
+    </form>
 </body>
 </html>
