--- a/contato.html
+++ b/contato.html
@@ -6,12 +6,18 @@
     <title>contato</title>
 </head>
 <body>
+    <h1>contato</h1>
+    <a href="index.html">voltar</a>
     <form action="" method="post">
         <fieldset>
             <legend> identificação</legend>
             <p>
                 <label for="nome">nome:</label>
                 <input type="text" name="nome" placeholder="digite seu nome completo." maxlength="150">
+            </p>
+            <p>
+                <label for="senha">Senha</label>
+                <input type="password" id="senha" placeholder="Digite sua senha" maxlength="20">
             </p>
         </fieldset>
     </form>
