--- a/contato.html
+++ b/contato.html
@@ -19,6 +19,19 @@
                 <label for="senha">Senha</label>
                 <input type="password" id="senha" placeholder="Digite sua senha" maxlength="20">
             </p>
+            <p>
+                <label for="email">E-mail</label>
+                <input type="password" id="email" placeholder="Digite seu email" maxlength="20">
+            </p>
+            <p>sexo: </p>
+            <p>
+                <input type="radio" name="sexo" id="masculino">
+                <label for="masculino">Masculino</label>
+
+                <input type="radio" name="sexo" id="feminino">
+                <label for="feminino">Feminino</label>
+            </p>
+
         </fieldset>
     </form>
 </body>
