--- a/contato.html
+++ b/contato.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>contato</h1>
-    <a href="contato.html">contato</a>
+    <a href="index.html">contato</a>
     <form action="" method="post">
         <fieldset>
             <legend> identificação</legend>
