--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
      <img src="imagens/45184mn.jpg">
     </figure>
     <a href="pagina.html">trocar</a>
+    <a href="contato.html">contato</a>
 </body>
 </html>
