--- a/contato.html
+++ b/contato.html
@@ -56,7 +56,7 @@
                         <option value="MG"> Minas Gerais</option>
                         <option value="ES"> Espirito Santos</option>
                     </optgroup>
-                    <optgroup label="Resgião Sul">
+                    <optgroup label="Região Sul">
                         <option value="PR"> Paraná</option>
                         <option value="SC"> Santa Catarina</option>
                         <option value="RS"> Rio grande do Sul</option>
@@ -71,7 +71,7 @@
                     <option value="TO"> Tocantins</option>
 
                 </optgroup>
-                <optgroup label=" Rgião Centro-Oeste">
+                <optgroup label=" Região Centro-Oeste">
                     <option value="GO"> Goiás</option>
                     <option value="MT"> Mato Grosso</option>
                     <option value="MS"> Mato Grosso do Sul</option>
